# bobby-sensei

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.db  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: deploy.yml
.streamlit/: config.toml
db/: init.sql
docs/: chat-ui.md  embeddings.md  extracao.md  format.md  retrieve.md
src/: app.py
src/core/: chat_state.py  chatbot_core.py  db.py  embed.py  extract.py  format.py  retrieve.py
src/ui/: chat_bubbles.py  sidebar.py  theme.py
