[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bobby-sensei"
version = "0.1.0"
description = "Assistente RAG sobre o Confluence da Bobby"
requires-python = ">=3.12"

# As dependências de runtime seguem no requirements.txt (decisão do time);
# este arquivo existe para tornar os pacotes de src/ importáveis via
# `pip install -e .`, sem manipulação de sys.path nos scripts.

[tool.setuptools.packages.find]
where = ["src"]
